app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/** {
  border: 2px solid red;
}*/

a:visited {
  color: #fff;
}

.btn {
  color: #fff;
  font-size: 1.5em;
}

h1 {
  color: #fff;
  font-size: 4em;
}

h2 {
  color: #fff;
  padding-top: 0px;
  margin-top: 0px;
  font-style: italic;;
}
.landing_bg {
  display: flex;
  position: absolute;
  height: 100vh;
  width: 100vw;
  align-items: center;
  justify-content: center;
  background: no-repeat center center fixed;
  z-index: -1;

}

.search-results{
  position: absolute;
bottom: 0;
}

.search-container {
  padding-bottom:1000px;
  bottom: 0;
  position: relative;
}


.landing_srch {
    display: table-cell;
    vertical-align: middle;
    align-items: center;
    justify-content: center;

  }

  .location_src {
    display: inline-block;
    /*position: absolute;*/
    height: 100%;
    width: 100%;
    /*align-items: center;
    justify-content: center;*/
  }

